force-app/main/default/objects/Pricebook2/fields/Bzirk__c.field-meta.xml
<CustomField>
    <fullName>Bzirk__c</fullName>
    <description>SAP price list code or multiple SAP price list codes separated by semicolon. Ignored when SAP Customer is informed.</description>
    <label>SAP Price Lists</label>
    <length>100</length>
    <type>Text</type>
</CustomField>