force-app/main/default/objects/Pricebook2/fields/EntitlementPolicy__c.field-meta.xml
<CustomField>
    <fullName>EntitlementPolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LLImita la carga de precios a los productos incluidos en la entitlement policy</description>
    <label>Entitlement Policy</label>
    <referenceTo>CommerceEntitlementPolicy</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>