force-app/main/default/objects/Pricebook2/fields/ExecutionContext__c.field-meta.xml
<CustomField>
    <fullName>ExecutionContext__c</fullName>
    <description>Execution Context que puede usar este Pricebook</description>
    <label>Execution Context</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExecutionContexts</valueSetName>
    </valueSet>
</CustomField>