force-app/main/default/objects/Pricebook2/fields/IsForClaims__c.field-meta.xml
<CustomField>
    <fullName>IsForClaims__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the price book is the one used in claims</description>
    <label>Is For Claims</label>
    <type>Checkbox</type>
</CustomField>