force-app/main/default/objects/Pricebook2/fields/IsRetailReferencePricebook__c.field-meta.xml
<CustomField>
    <fullName>IsRetailReferencePricebook__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If check, it&apos;s the Reference Pricebook for the context</description>
    <label>Is Retail Reference Pricebook</label>
    <type>Checkbox</type>
</CustomField>