force-app/main/default/objects/Pricebook2/fields/LastSync__c.field-meta.xml
<CustomField>
    <fullName>LastSync__c</fullName>
    <description>Date the book has been synced with SAP</description>
    <label>Last Sync</label>
    <type>DateTime</type>
</CustomField>