force-app/main/default/objects/Pricebook2/fields/LastSyncResult__c.field-meta.xml
<CustomField>
    <fullName>LastSyncResult__c</fullName>
    <label>Last Sync Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>EXCEPTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>