force-app/main/default/objects/Pricebook2/fields/PriceType__c.field-meta.xml
<CustomField>
    <fullName>PriceType__c</fullName>
    <description>Indica qué precios se graban en los price book entries. Si &quot;PRICE UNIT&quot;, se usa el precio de SAP (por MT2 en bases). Si &quot;SALES UNIT&quot; se usa el precio calculado por unidad de venta.</description>
    <inlineHelpText>Indica qué precios se graban en los price book entries. Si &quot;PRICE UNIT&quot;, se usa el precio de SAP (por MT2 en bases). Si &quot;SALES UNIT&quot; se usa el precio calculado por unidad de venta.</inlineHelpText>
    <label>Price Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPR</fullName>
                <default>true</default>
                <label>Use Price Unit</label>
            </value>
            <value>
                <fullName>UMV</fullName>
                <label>Use Sales Unit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>