force-app/main/default/objects/Pricebook2/fields/SamplesOnly__c.field-meta.xml
<CustomField>
    <fullName>SamplesOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE when the pricebook is for sample products only</description>
    <label>Samples Pricebook</label>
    <type>Checkbox</type>
</CustomField>