force-app/main/default/objects/Pricebook2/fields/SAPCustomer__c.field-meta.xml
<CustomField>
    <fullName>SAPCustomer__c</fullName>
    <description>SAP customer code to get the special prices from (read from ZB2B_PRICE2__x)</description>
    <inlineHelpText>SAP customer code to get the special prices from (read from ZB2B_PRICE2__x)</inlineHelpText>
    <label>SAP Customer</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>