force-app/main/default/objects/Pricebook2/fields/SAPSync__c.field-meta.xml
<CustomField>
    <fullName>SAPSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SI marcado, significa que se actualizan los entries según SAP</description>
    <label>SAP Sync</label>
    <type>Checkbox</type>
</CustomField>