force-app/main/default/objects/Pricebook2/listViews/All_Price_Books.listView-meta.xml
<ListView>
    <fullName>All_Price_Books</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>ExecutionContext__c</columns>
    <columns>SamplesOnly__c</columns>
    <columns>SAPCustomer__c</columns>
    <columns>SAPSync__c</columns>
    <columns>IsRetailReferencePricebook__c</columns>
    <columns>PriceType__c</columns>
    <columns>Bzirk__c</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>LastSync__c</columns>
    <columns>LastSyncResult__c</columns>
    <columns>PRICEBOOK2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Price Books</label>
</ListView>