force-app/main/default/objects/Pricebook2/listViews/FRANCE_PRICEBOOKS.listView-meta.xml
<ListView>
    <fullName>FRANCE_PRICEBOOKS</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>Bzirk__c</columns>
    <columns>IsRetailReferencePricebook__c</columns>
    <columns>SAPSync__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExecutionContext__c</field>
        <operation>equals</operation>
        <value>FR</value>
    </filters>
    <label>FRANCE PRICEBOOKS</label>
</ListView>