force-app/main/default/objects/Pricebook2/listViews/Retail_Price_Books.listView-meta.xml
<ListView>
    <fullName>Retail_Price_Books</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <columns>SAPSync__c</columns>
    <columns>PriceType__c</columns>
    <columns>LastSyncResult__c</columns>
    <columns>Bzirk__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsRetailReferencePricebook__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Retail Price Books</label>
</ListView>